fix loader on small screens

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -57,6 +57,7 @@ body
   top: 0
   left: 0
   width: 100%
+  z-index: 100
   &.fade
     opacity: 0
 
