--- a/app/assets/stylesheets/logo.css.sass
+++ b/app/assets/stylesheets/logo.css.sass
@@ -28,7 +28,7 @@
 
 .loading
   .logo
-    width: 500px
+    max-width: 500px
     margin: auto
   .disk-container
     animation-name: spinDisk
